--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       </div>
     </div>
   </section>
-<br><br><br>
+  <br><br><br>
   <section class="text-center">
     <div class="container">
       <h1 class="text-center">Testimonials</h1>
@@ -268,48 +268,81 @@
           <div class="carousel-item active">
             <br><br><br><br>
             <p class="text-secondary">“Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus
-              malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br> Pellentesque
+              malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br>
+              Pellentesque
               habitant morbi tristique senectus et netus et malesuada<br> fames ac turpis egestas. Integer convallis
               volutpat dui quis scelerisque.”</p>
-              <br>
-              <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
-              <h6>Maria Jones</h6>
-              <p>CEO, Co-Founder, XYZ Inc.</p>
+            <br>
+            <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
+            <h6>Maria Jones</h6>
+            <p>CEO, Co-Founder, XYZ Inc.</p>
           </div>
           <div class="carousel-item">
             <br><br><br><br>
             <p class="text-secondary">“Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus
-              malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br> Pellentesque
+              malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br>
+              Pellentesque
               habitant morbi tristique senectus et netus et malesuada<br> fames ac turpis egestas. Integer convallis
               volutpat dui quis scelerisque.”</p>
-              <br>
-              <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
-              <h6>Maria Jones</h6>
-              <p>CEO, Co-Founder, XYZ Inc.</p>
+            <br>
+            <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
+            <h6>Maria Jones</h6>
+            <p>CEO, Co-Founder, XYZ Inc.</p>
           </div>
           <div class="carousel-item">
             <br><br><br><br>
             <p class="text-secondary">“Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus
-              malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br> Pellentesque
+              malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br>
+              Pellentesque
               habitant morbi tristique senectus et netus et malesuada<br> fames ac turpis egestas. Integer convallis
               volutpat dui quis scelerisque.”</p>
-              <br>
-              <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
-              <h6>Maria Jones</h6>
-              <p>CEO, Co-Founder, XYZ Inc.</p>
+            <br>
+            <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
+            <h6>Maria Jones</h6>
+            <p>CEO, Co-Founder, XYZ Inc.</p>
           </div>
         </div>
-        <button class="carousel-control-prev bg-dark text-light" type="button" data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="prev" style="width: 60px; height: 60px; border-radius: 50px;">
+        <button class="carousel-control-prev bg-dark text-light" type="button"
+          data-bs-target="#carouselExampleIndicators" data-bs-slide="prev"
+          style="width: 60px; height: 60px; border-radius: 50px;">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next bg-dark text-light" type="button" data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="next" style="width: 60px; height: 60px; border-radius: 50px;">
+        <button class="carousel-control-next bg-dark text-light" type="button"
+          data-bs-target="#carouselExampleIndicators" data-bs-slide="next"
+          style="width: 60px; height: 60px; border-radius: 50px;">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    </div>
+  </section>
+  <div class="clk"></div>
+  <section>
+    <div class="container">
+      <h1>Recent Blog</h1>
+      <br><br>
+      <div class="row">
+        <div class="col img3">
+          <img src="./img/6226682065361947205.jpg" alt="" width="400" style="border-radius: 5%;">
+          <br><br><br>
+          <h5>First Time Home Owner Ideas</h5>
+          <p>by Kristin Watson on Dec 19, 2021</p>
+        </div>
+        <div class="col img3">
+          <img src="./img/6226682065361947214.jpg" alt="" width="400" style="border-radius: 5%;">
+          <br><br><br>
+          <h5>First Time Home Owner Ideas</h5>
+          <p>by Kristin Watson on Dec 19, 2021</p>
+        </div>
+        <div class="col img3">
+          <img src="./img/6226682065361947215.jpg" alt="" width="400" style="border-radius: 5%;">
+          <br><br><br>
+          <h5>First Time Home Owner Ideas</h5>
+          <p>by Kristin Watson on Dec 19, 2021</p>
+        </div>
+      </div>
+    </div>
     </div>
   </section>
 
