--- a/index.html
+++ b/index.html
@@ -345,6 +345,45 @@
     </div>
     </div>
   </section>
+  <div class="clk"></div>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-7">
+          <i class="fa-regular fa-envelope"></i>
+          Subscribe to Newsletter
+          <br>
+          <br>
+          <input class="btn border rounded-pill" type="text" placeholder="Enter your name">
+          <input class="btn border rounded-pill" type="email" placeholder="Enter your email">
+          <button class="btn border rounded-pill"><i class="fa-brands fa-telegram"></i></button>
+        </div>
+        <div class="col-5">
+          <img class="img4" src="./img/6226682065361947219.jpg" alt="" width="300">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <h1>Furni.</h1>
+      <div class="row">
+        <div class="col-4">
+          <p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac
+            aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant</p>
+        </div>
+        <div class="col-1">
+          <a href="#">About us</a>
+          <a href="#">Services</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact us</a>
+        </div>
+        <div class="col-1"></div>
+        <div class="col-1"></div>
+        <div class="col-1"></div>
+      </div>
+    </div>
+  </section>
 
 
 
