--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="navbar-nav w-75 nav1">
             <a class="nav-link active border-bottom border-5 border-warning text-light" aria-current="page"
               href="#">Home</a>
-            <a class="nav-link ms-2 text-light" href="#">Shop</a>
+            <a class="nav-link ms-2 text-light" href="shop..html">Shop</a>
             <a class="nav-link ms-2 text-light" href="#">About us</a>
             <a class="nav-link ms-2 text-light" href="#">Services</a>
             <a class="nav-link ms-2 text-light" href="#">Blog</a>
@@ -104,7 +104,6 @@
               <p class="card-text">Ergonomic Chair</p>
               <strong>$43.00</strong>
             </div>
-            <div class="chair"></div>
           </div>
         </div>
       </div>
@@ -318,7 +317,7 @@
     </div>
   </section>
   <div class="clk"></div>
-  <section>
+  <section class="sec8">
     <div class="container">
       <h1>Recent Blog</h1>
       <br><br>
@@ -345,13 +344,14 @@
     </div>
     </div>
   </section>
-  <div class="clk"></div>
   <section>
     <div class="container">
       <div class="row">
         <div class="col-7">
+          <br><br><br>
           <i class="fa-regular fa-envelope"></i>
           Subscribe to Newsletter
+          <br>
           <br>
           <br>
           <input class="btn border rounded-pill" type="text" placeholder="Enter your name">
@@ -359,31 +359,68 @@
           <button class="btn border rounded-pill"><i class="fa-brands fa-telegram"></i></button>
         </div>
         <div class="col-5">
-          <img class="img4" src="./img/6226682065361947219.jpg" alt="" width="300">
+          <img class="img4" src="./img/6226682065361947219.jpg" alt="" width="300" style="mix-blend-mode: darken;">
         </div>
       </div>
     </div>
   </section>
-  <section>
-    <div class="container">
+  <br><br><br>
+  <section class="sec9">
+    <div class="container border-bottom">
       <h1>Furni.</h1>
       <div class="row">
         <div class="col-4">
           <p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac
             aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant</p>
         </div>
-        <div class="col-1">
+        <div class="col-2">
           <a href="#">About us</a>
+          <br>
           <a href="#">Services</a>
+          <br>
           <a href="#">Blog</a>
+          <br>
           <a href="#">Contact us</a>
         </div>
-        <div class="col-1"></div>
-        <div class="col-1"></div>
-        <div class="col-1"></div>
+        <div class="col-2">
+          <a href="#">Support</a>
+          <br>
+          <a href="#">Knowledge base</a>
+          <br>
+          <a href="#">Live chat</a>
+        </div>
+        <div class="col-2">
+          <a href="#">Jobs</a>
+          <br>
+          <a href="#">Our team</a>
+          <br>
+          <a href="#">Leadership</a>
+          <br>
+          <a href="#">Privacy Policy</a>
+        </div>
+        <div class="col-2">
+          <a href="#">Nordic Chair</a>
+          <br>
+          <a href="#">Kruzo Aero</a>
+          <br>
+          <a href="#">Ergonomic Chair</a>
+        </div>
       </div>
+      <div class="div2"><i class="fa-brands fa-facebook"></i></div>
+      <div class="div2"><i class="fa-brands fa-twitter"></i></div>
+      <div class="div2"><i class="fa-brands fa-instagram"></i></div>
+      <div class="div2"><i class="fa-brands fa-linkedin"></i></div>
+      <br><br><br>
     </div>
   </section>
+  <footer>
+    <div class="container">
+      <br><br>
+      <p>Copyright ©2024. All Rights Reserved. — Designed with love by Untree.co Distributed <br> By ThemeWagon</p>
+      <p class="p1">Terms & Conditions</p>
+      <p class="p2">Privacy Policy</p>
+    </div>
+  </footer>
 
 
 
