--- a/shop..html
+++ b/shop..html
@@ -26,9 +26,9 @@
           <div class="navbar-nav w-75 nav1">
             <a class="nav-link ms-2 text-light" href="index.html">Home</a>
             <a class="nav-link active border-bottom border-5 border-warning text-light" aria-current="page"
-            href="#">Shop</a>
-            <a class="nav-link ms-2 text-light" href="#">About us</a>
-            <a class="nav-link ms-2 text-light" href="#">Services</a>
+              href="#">Shop</a>
+            <a class="nav-link ms-2 text-light" href="about.html">About us</a>
+            <a class="nav-link ms-2 text-light" href="serveces.html">Services</a>
             <a class="nav-link ms-2 text-light" href="#">Blog</a>
             <a class="nav-link ms-2 text-light" href="#">Contact us</a>
           </div>
@@ -52,11 +52,100 @@
       </div>
     </main>
   </header>
-  <br><br><br>
-  <section></section>
-
-
-
+  <section class="sec1">
+    <br><br><br>
+    <div class="container">
+      <div class="row">
+        <div class="col-3 text-center fs-4">
+          <div class="card" style="width: 18rem; border: 0px; background-color:  rgb(235, 235, 235);">
+            <img src="./img/6226682065361947218.jpg" class="card-img-top" alt="..."
+              style="background-color:  rgb(235, 235, 235); mix-blend-mode: darken;">
+            <div class="card-body">
+              <p class="card-text">Ergonomic Chair</p>
+              <strong>$50.00</strong>
+            </div>
+          </div>
+        </div>
+        <div class="col-3 text-center fs-4">
+          <div class="card" style="width: 18rem; border: 0px; background-color:  rgb(235, 235, 235);">
+            <img src="./img/6226682065361947216.jpg" class="card-img-top" alt="..."
+              style="background-color:  rgb(235, 235, 235); mix-blend-mode: darken;">
+            <div class="card-body">
+              <p class="card-text">Nordic Chair</p>
+              <strong>$50.00</strong>
+            </div>
+          </div>
+        </div>
+        <div class="col-3 text-center fs-4">
+          <div class="card" style="width: 18rem; border: 0px; background-color:  rgb(235, 235, 235);">
+            <img src="./img/6226682065361947217.jpg" class="card-img-top" alt="..."
+              style="background-color:  rgb(235, 235, 235); mix-blend-mode: darken;">
+            <div class="card-body">
+              <p class="card-text">Kruzo Aero Chair</p>
+              <strong>$78.00</strong>
+            </div>
+          </div>
+        </div>
+        <div class="col-3 text-center fs-4">
+          <div class="card" style="width: 18rem; border: 0px; background-color:  rgb(235, 235, 235);">
+            <img src="./img/6226682065361947218.jpg" class="card-img-top" alt="..."
+              style="background-color:  rgb(235, 235, 235); mix-blend-mode: darken;">
+            <div class="card-body">
+              <p class="card-text">Ergonomic Chair</p>
+              <strong>$43.00</strong>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="sec1">
+    <div class="container">
+      <div class="row">
+        <div class="col-3 text-center fs-4">
+          <div class="card" style="width: 18rem; border: 0px; background-color:  rgb(235, 235, 235);">
+            <img src="./img/6226682065361947218.jpg" class="card-img-top" alt="..."
+              style="background-color:  rgb(235, 235, 235); mix-blend-mode: darken;">
+            <div class="card-body">
+              <p class="card-text">Ergonomic Chair</p>
+              <strong>$50.00</strong>
+            </div>
+          </div>
+        </div>
+        <div class="col-3 text-center fs-4">
+          <div class="card" style="width: 18rem; border: 0px; background-color:  rgb(235, 235, 235);">
+            <img src="./img/6226682065361947216.jpg" class="card-img-top" alt="..."
+              style="background-color:  rgb(235, 235, 235); mix-blend-mode: darken;">
+            <div class="card-body">
+              <p class="card-text">Nordic Chair</p>
+              <strong>$50.00</strong>
+            </div>
+          </div>
+        </div>
+        <div class="col-3 text-center fs-4">
+          <div class="card" style="width: 18rem; border: 0px; background-color:  rgb(235, 235, 235);">
+            <img src="./img/6226682065361947217.jpg" class="card-img-top" alt="..."
+              style="background-color:  rgb(235, 235, 235); mix-blend-mode: darken;">
+            <div class="card-body">
+              <p class="card-text">Kruzo Aero Chair</p>
+              <strong>$78.00</strong>
+            </div>
+          </div>
+        </div>
+        <div class="col-3 text-center fs-4">
+          <div class="card" style="width: 18rem; border: 0px; background-color:  rgb(235, 235, 235);">
+            <img src="./img/6226682065361947218.jpg" class="card-img-top" alt="..."
+              style="background-color:  rgb(235, 235, 235); mix-blend-mode: darken;">
+            <div class="card-body">
+              <p class="card-text">Ergonomic Chair</p>
+              <strong>$43.00</strong>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <br><br>
   <section>
     <div class="container">
       <div class="row">
@@ -71,8 +160,8 @@
           <input class="btn border rounded-pill" type="email" placeholder="Enter your email">
           <button class="btn border rounded-pill"><i class="fa-brands fa-telegram"></i></button>
         </div>
-        <div class="col-5">
-          <img class="img4" src="./img/6226682065361947219.jpg" alt="" width="300" style="mix-blend-mode: darken;">
+        <div class="col-5 float-end">
+          <img class="img4" src="./img/6226682065361947219.jpg" alt="" width="360" style="mix-blend-mode: darken;">
         </div>
       </div>
     </div>
