--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <a class="nav-link active border-bottom border-5 border-warning text-light" aria-current="page"
               href="#">Home</a>
             <a class="nav-link ms-2 text-light" href="shop..html">Shop</a>
-            <a class="nav-link ms-2 text-light" href="#">About us</a>
-            <a class="nav-link ms-2 text-light" href="#">Services</a>
+            <a class="nav-link ms-2 text-light" href="about.html">About us</a>
+            <a class="nav-link ms-2 text-light" href="serveces.html">Services</a>
             <a class="nav-link ms-2 text-light" href="#">Blog</a>
             <a class="nav-link ms-2 text-light" href="#">Contact us</a>
           </div>
