--- a/serveces.html
+++ b/serveces.html
@@ -71,9 +71,242 @@
             </div>
         </main>
     </header>
+    <div class="color2">
     <section>
-        <div class="container"></div>
+        <br><br><br>
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <div class="" style="width: 17rem;">
+                        <div class="i_span"><i class="fa-solid fa-truck fa-2x"></i></div>
+                        <div class="card-body">
+                            <p style="font-size: 16px;">Fast & Free Shipping</p>
+                            <p class="card-text" style="font-size: 15px; color: grey;">Some quick example
+                                text
+                                to build on the
+                                card title and make up the bulk of
+                                the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="" style="width: 17rem;">
+                        <div class="i_span"><i class="fa-solid fa-bag-shopping fa-2x"></i></div>
+                        <div class="card-body">
+                            <p style="font-size: 16px;">Easy to Shop</p>
+                            <p class="card-text" style="font-size: 15px; color: grey;">Some quick example
+                                text
+                                to build on the
+                                card title and make up the bulk of
+                                the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="" style="width: 17rem;">
+                        <div class="i_span"><i class="fa-solid fa-life-ring fa-2x"></i></div>
+                        <div class="card-body">
+                            <p style="font-size: 16px;">24/7 Support</p>
+                            <p class="card-text" style="font-size: 15px; color: grey;">Some quick example
+                                text
+                                to build on the
+                                card title and make up the bulk of
+                                the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="" style="width: 17rem;">
+                        <div class="i_span"><i class="fa-solid fa-arrows-rotate fa-2x"></i></div>
+                        <div class="card-body">
+                            <p style="font-size: 16px;">Hassle Free Returns</p>
+                            <p class="card-text" style="font-size: 15px; color: grey;">Some quick example
+                                text
+                                to build on the
+                                card title and make up the bulk of
+                                the
+                                card's
+                                content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br><br>
+            <br>
+            <div class="row">
+                <div class="col-3">
+                    <div class="" style="width: 17rem;">
+                        <div class="i_span"><i class="fa-solid fa-truck fa-2x"></i></div>
+                        <div class="card-body">
+                            <p style="font-size: 16px;">Fast & Free Shipping</p>
+                            <p class="card-text" style="font-size: 15px; color: grey;">Some quick example
+                                text
+                                to build on the
+                                card title and make up the bulk of
+                                the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="" style="width: 17rem;">
+                        <div class="i_span"><i class="fa-solid fa-bag-shopping fa-2x"></i></div>
+                        <div class="card-body">
+                            <p style="font-size: 16px;">Easy to Shop</p>
+                            <p class="card-text" style="font-size: 15px; color: grey;">Some quick example
+                                text
+                                to build on the
+                                card title and make up the bulk of
+                                the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="" style="width: 17rem;">
+                        <div class="i_span"><i class="fa-solid fa-life-ring fa-2x"></i></div>
+                        <div class="card-body">
+                            <p style="font-size: 16px;">24/7 Support</p>
+                            <p class="card-text" style="font-size: 15px; color: grey;">Some quick example
+                                text
+                                to build on the
+                                card title and make up the bulk of
+                                the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="" style="width: 17rem;">
+                        <div class="i_span"><i class="fa-solid fa-arrows-rotate fa-2x"></i></div>
+                        <div class="card-body">
+                            <p style="font-size: 16px;">Hassle Free Returns</p>
+                            <p class="card-text" style="font-size: 15px; color: grey;">Some quick example
+                                text
+                                to build on the
+                                card title and make up the bulk of
+                                the
+                                card's
+                                content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+    <br><br><br>
+    <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-3 mt-5">
+              <strong class="fs-2">Crafted with <br>excellent material</strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae non aut consequatur doloremque veritatis
+                quibusdam autem</p>
+              <button class="rounded-pill  btn border border-3 bg-dark text-light"
+                style="width: 130px; height: 50px;">Explore</button>
+            </div>
+            <div class="col-3 text-center fs-4">
+              <div class="card" style="width: 18rem; border: 0px;">
+                <img src="./img/6226682065361947216.jpg" class="card-img-top" alt="..." style="display: block;">
+                <div class="chair">
+                  <p class="card-text">Nordic Chair</p>
+                  <strong>$50.00</strong>
+                </div>
+              </div>
+            </div>
+            <div class="col-3 text-center fs-4">
+              <div class="card" style="width: 18rem; border: 0px;">
+                <img src="./img/6226682065361947217.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Kruzo Aero Chair</p>
+                  <strong>$78.00</strong>
+                </div>
+                <div class="chair"></div>
+              </div>
+            </div>
+            <div class="col-3 text-center fs-4">
+              <div class="card" style="width: 18rem; border: 0px;">
+                <img src="./img/6226682065361947218.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Ergonomic Chair</p>
+                  <strong>$43.00</strong>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <br><br><br>
+      <section class="text-center">
+        <div class="container">
+          <h1 class="text-center">Testimonials</h1>
+          <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <br><br><br><br>
+                <p class="text-secondary">“Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus
+                  malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br>
+                  Pellentesque
+                  habitant morbi tristique senectus et netus et malesuada<br> fames ac turpis egestas. Integer convallis
+                  volutpat dui quis scelerisque.”</p>
+                <br>
+                <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
+                <h6>Maria Jones</h6>
+                <p>CEO, Co-Founder, XYZ Inc.</p>
+              </div>
+              <div class="carousel-item">
+                <br><br><br><br>
+                <p class="text-secondary">“Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus
+                  malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br>
+                  Pellentesque
+                  habitant morbi tristique senectus et netus et malesuada<br> fames ac turpis egestas. Integer convallis
+                  volutpat dui quis scelerisque.”</p>
+                <br>
+                <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
+                <h6>Maria Jones</h6>
+                <p>CEO, Co-Founder, XYZ Inc.</p>
+              </div>
+              <div class="carousel-item">
+                <br><br><br><br>
+                <p class="text-secondary">“Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus
+                  malesuada.<br> Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.<br>
+                  Pellentesque
+                  habitant morbi tristique senectus et netus et malesuada<br> fames ac turpis egestas. Integer convallis
+                  volutpat dui quis scelerisque.”</p>
+                <br>
+                <img src="./img/6226682065361947206.jpg" alt="" style="border-radius: 50px; width: 100px; height: 100px;">
+                <h6>Maria Jones</h6>
+                <p>CEO, Co-Founder, XYZ Inc.</p>
+              </div>
+            </div>
+            <button class="carousel-control-prev bg-dark text-light" type="button"
+              data-bs-target="#carouselExampleIndicators" data-bs-slide="prev"
+              style="width: 60px; height: 60px; border-radius: 50px;">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next bg-dark text-light" type="button"
+              data-bs-target="#carouselExampleIndicators" data-bs-slide="next"
+              style="width: 60px; height: 60px; border-radius: 50px;">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </section>
+    </div>
+      <br><br><br>
     <section>
         <div class="container">
           <div class="row">
