--- a/serveces.html
+++ b/serveces.html
@@ -201,23 +201,23 @@
     <section>
         <div class="container">
           <div class="row">
-            <div class="col-3 mt-5">
+            <div class="col-3 mt-5 color2">
               <strong class="fs-2">Crafted with <br>excellent material</strong>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae non aut consequatur doloremque veritatis
                 quibusdam autem</p>
               <button class="rounded-pill  btn border border-3 bg-dark text-light"
                 style="width: 130px; height: 50px;">Explore</button>
             </div>
-            <div class="col-3 text-center fs-4">
+            <div class="col-3 text-center fs-4" style="mix-blend-mode: darken;">
               <div class="card" style="width: 18rem; border: 0px;">
                 <img src="./img/6226682065361947216.jpg" class="card-img-top" alt="..." style="display: block;">
-                <div class="chair">
+                <div class="card-body">
                   <p class="card-text">Nordic Chair</p>
                   <strong>$50.00</strong>
                 </div>
               </div>
             </div>
-            <div class="col-3 text-center fs-4">
+            <div class="col-3 text-center fs-4" style="mix-blend-mode: darken;">
               <div class="card" style="width: 18rem; border: 0px;">
                 <img src="./img/6226682065361947217.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -227,7 +227,7 @@
                 <div class="chair"></div>
               </div>
             </div>
-            <div class="col-3 text-center fs-4">
+            <div class="col-3 text-center fs-4" style="mix-blend-mode: darken;">
               <div class="card" style="width: 18rem; border: 0px;">
                 <img src="./img/6226682065361947218.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
