--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
                         <a class="nav-link active border-bottom border-5 border-warning text-light" aria-current="page"
                             href="#">About us</a>
                         <a class="nav-link ms-2 text-light" href="serveces.html">Services</a>
-                        <a class="nav-link ms-2 text-light" href="#">Blog</a>
-                        <a class="nav-link ms-2 text-light" href="#">Contact us</a>
+                        <a class="nav-link ms-2 text-light" href="blog.html">Blog</a>
+                        <a class="nav-link ms-2 text-light" href="contact.html">Contact us</a>
                     </div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="currentColor"
                         class="bi bi-person" viewBox="0 0 16 16">
