--- a/shop..html
+++ b/shop..html
@@ -29,8 +29,8 @@
               href="#">Shop</a>
             <a class="nav-link ms-2 text-light" href="about.html">About us</a>
             <a class="nav-link ms-2 text-light" href="serveces.html">Services</a>
-            <a class="nav-link ms-2 text-light" href="#">Blog</a>
-            <a class="nav-link ms-2 text-light" href="#">Contact us</a>
+            <a class="nav-link ms-2 text-light" href="blog.html">Blog</a>
+            <a class="nav-link ms-2 text-light" href="contact.html">Contact us</a>
           </div>
           <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="currentColor" class="bi bi-person"
             viewBox="0 0 16 16">
