--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6">
-                        <h1 class="text-bold">Blog</h1>
+                        <h1 class="text-bold">Contact Us</h1>
                         <br>
                         <p style="font-size: 12px;">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem <br>ipsum dolor sit amet
@@ -71,7 +71,18 @@
             </div>
         </main>
     </header>
-
+    <div class="color2">
+      <section>
+        <div class="container">
+          <div class="row sp">
+            <br><br>
+            <div class="col"><span><i class="fa-solid fa-location-dot fa-2x "></i></span><p>43 Raymouth Rd. Baltemoer, London 3910</p></div>
+            <div class="col"><span><i class="fa-solid fa-envelope fa-2x"></i></span><p>info@yourdomain.com</p></div>
+            <div class="col"><span><i class="fa-solid fa-phone fa-2x"></i></span><p>+1 294 3925 3939</p></div>
+          </div>
+        </div>
+      </section>
+    </div>
     <section>
         <div class="container">
           <div class="row">
